syntax = "proto3";

option go_package = "pkg/grpc";

package myapp;

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service GreetingService {
  rpc Hello(HelloRequest) returns (HelloResponse);
}
